# rust-chess

./: Cargo.toml  README.md  config.txt
src/: bb_legal_move_gen.rs  bitboards.rs  console_game.rs  do_undo_moves.rs  evaluation.rs  fen.rs  hash.rs  legal_move_gen.rs  main.rs  perft.rs  polyglot.rs  principal_variation.rs  search.rs  statics.rs  structs.rs  trans_table.rs  uci.rs  validation.rs  visualization.rs
