[package]
name = "ChessEngine"
version = "0.1.0"
authors = ["alexa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.0"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
unicode-segmentation = "1.6.0"
rayon = "1.5.0"

[profile.release]
debug = true